blockml/test/valid/11_wherecalc_refs_calc/v25/v25m.model
model: v25m
sql_always_where_calc: ${a.calc2} > 100
joins:

- from_view: v25_one
  as: a



