blockml/test/errors/06_join_sql_where/e243/e243m.model
model: e243m
joins:
- from_view: e243_one
  as: a

- join_view: e243_one
  as: b
  sql_on: ${a.dim5} = ${b.dim5}
  sql_where: ${a.f1} > 10      